--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ bot.proxyType=SOCKSS
 bot.proxyHost=localhost
 bot.proxyPort=9150
 
+#Mongo db
+spring.data.mongodb.host=${MONGODB_HOST:localhost}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
+spring.data.mongodb.database=${MONGODB_DATABASE:mental_bot}
+spring.data.mongodb.username=${MONGODB_USERNAME:admin}
+spring.data.mongodb.password=${MONGODB_PASSWORD:admin}
+
