--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,24 @@
 version: '1.0'
 services:
   app:
-    build: .
+    container_name: mentalbot-app
+    build:
+      context: ./
     links:
       - mongo
+      - vault
     ports:
-      - "8094:8095"
-    container_name: mentalbot-app
+      - "8094:8094"
     depends_on:
       - mongo
+      - vault
 
 #MONGO ----------------------------------------------------------------------------------------------
   mongo:
+    image: mongo
+    container_name: mongo-db
     ports:
       - '27018:27017'
-    container_name: mongo-db
     restart: always
     logging:
       options:
@@ -26,5 +30,16 @@ services:
       - MONGODB_DATABASE=$${spring.data.mongodb.database}
       - MONGODB_USERNAME=$${spring.data.mongodb.username}
       - MONGODB_PASSWORD=$${spring.data.mongodb.password}
-    image: mongo
 
+#VAULT ----------------------------------------------------------------------------------------------
+  vault:
+    image: vault:1.2.1
+    container_name: vault
+    ports:
+      - "8200:8200"
+    cap_add:
+      - IPC_LOCK
+    build: ./
+    env_file:
+      - .env
+    command: vault server -dev -dev-root-token-id=$VAULT_ROOT_TOKEN  -dev-listen-address=$VAULT_LISTEN_ADDRESS
