--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8094
+spring.config.import=optional:file:.env[.properties]
 
 #Telegram
 bot.name=Psy Helper
@@ -10,10 +11,16 @@ bot.proxyType=SOCKSS
 bot.proxyHost=localhost
 bot.proxyPort=9150
 
-#Mongo db
+#Mongo
 spring.data.mongodb.host=${MONGODB_HOST:localhost}
 spring.data.mongodb.port=${MONGODB_PORT:27017}
 spring.data.mongodb.database=${MONGODB_DATABASE:mental_bot}
 spring.data.mongodb.username=${MONGODB_USERNAME:admin}
 spring.data.mongodb.password=${MONGODB_PASSWORD:admin}
+
+#Vault
+vault.root.token=${VAULT_ROOT_TOKEN}
+vault.root.host=${VAULT_ROOT_HOST}
+vault.root.port=${VAULT_ROOT_PORT}
+vault.listen.address=${VAULT_LISTEN_ADDRESS}
 
