--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,15 +12,20 @@ bot.proxyHost=localhost
 bot.proxyPort=9150
 
 #Mongo
-spring.data.mongodb.host=${MONGODB_HOST:localhost}
-spring.data.mongodb.port=${MONGODB_PORT:27017}
-spring.data.mongodb.database=${MONGODB_DATABASE:mental_bot}
-spring.data.mongodb.username=${MONGODB_USERNAME:admin}
-spring.data.mongodb.password=${MONGODB_PASSWORD:admin}
+mongodb.pool-max-life-time=60000
+mongodb.pool-min-life-time=6
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mental_bot
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin
+spring.data.mongodb.uri=mongodb://${spring.data.mongodb.host}:${spring.data.mongodb.port}
+
 
 #Vault
 vault.root.token=${VAULT_ROOT_TOKEN}
 vault.root.host=${VAULT_ROOT_HOST}
 vault.root.port=${VAULT_ROOT_PORT}
+
 vault.listen.address=${VAULT_LISTEN_ADDRESS}
 
