--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,13 +33,26 @@ services:
 
 #VAULT ----------------------------------------------------------------------------------------------
   vault:
-    image: vault:1.2.1
+    image: vault:1.6.1
     container_name: vault
-    ports:
-      - "8200:8200"
+    command: ["sh", "-c", "vault server -config /vault/config/config.hcl"]
     cap_add:
       - IPC_LOCK
-    build: ./
-    env_file:
-      - .env
-    command: vault server -dev -dev-root-token-id=$VAULT_ROOT_TOKEN  -dev-listen-address=$VAULT_LISTEN_ADDRESS
+    ports:
+      - 8200:8200
+    volumes:
+      - ./vault/config.hcl:/vault/config/config.hcl
+
+  vault-init:
+    image: vault:1.6.1
+    container_name: vault-init
+    depends_on:
+      - vault
+    volumes:
+      - ./vault/init-vault.sh:/vault/scripts/init-vault.sh
+      - ./vault/keys:/vault/keys
+    environment:
+      VAULT_ADDR: "http://vault:8200"
+      VAULT_DEV_ROOT_TOKEN_ID: root
+    command: [ "sh", "-c", "/vault/scripts/init-vault.sh" ]
+
