--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,19 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=admin
 spring.data.mongodb.uri=mongodb://${spring.data.mongodb.host}:${spring.data.mongodb.port}
 
+vault.mongo.uri=${mongo.uri}
+vault.mongo.username=${mongo.username}
+vault.mongo.password=${mongo.password}
+vault.mongo.database=${mongo.database}
+
 
 #Vault
-vault.root.token=${VAULT_ROOT_TOKEN}
-vault.root.host=${VAULT_ROOT_HOST}
-vault.root.port=${VAULT_ROOT_PORT}
+spring.cloud.vault.uri=${VAULT_API_ADDR}
+spring.cloud.vault.token=${VAULT_ROOT_TOKEN}
+spring.cloud.vault.kv.enabled=true
+spring.cloud.vault.kv.backend=secret
 
-vault.listen.address=${VAULT_LISTEN_ADDRESS}
+
+
+
 
