--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
     </parent>
 
     <groupId>com.bot</groupId>
-    <artifactId>MentalBot</artifactId>
+    <artifactId>AppBot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>MentalBot</name>
-    <description>MentalBot</description>
+    <name>AppBot</name>
+    <description>AppBot</description>
 
     <properties>
         <java.version>17</java.version>
@@ -32,20 +32,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
-
-        <!-- Spring Cloud Vault for integrating with HashiCorp Vault -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-vault-config</artifactId>
-            <version>4.0.1</version>
-        </dependency>
-
-        <!-- Vault Core Dependency -->
-        <dependency>
-            <groupId>org.springframework.vault</groupId>
-            <artifactId>spring-vault-core</artifactId>
-            <version>3.0.2</version>
         </dependency>
 
         <!-- Spring Boot DevTools -->
